added spring security

--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -35,7 +35,8 @@
             <td></td>
             <td th:text="${student.getFirstName()}"></td>
             <td th:text="${student.getLastName()}"></td>
-            <td><a th:href="${'/students/edit/?id='+student.getId()}" >bearbeiten</a></td>
+            <td><a th:href="${'/students/edit?id='+student.getId()}" >bearbeiten</a></td>
+            <td><a th:href="${'/students/delete?id='+student.getId()}" th:method="post" >löschen</a></td>
         </tr>
 
     </tbody>
